syntax = "proto3";

package protocol.grpc;

option go_package = "github.com/k1nky/tookhook/pkg/plugin/proto";

message PluginOptions {
    map<string, string> values = 1;
}

message ReceiverSpec {
    PluginOptions options = 3;
}

message Data {
    bytes data = 1;
}

message ForwardRequest {
    ReceiverSpec receiver = 1;
    Data data = 2;
    PluginOptions plugin_options = 3;
}

message ForwardResponse {
    bytes data = 1;
}

message Empty {}

service Plugin {
    rpc Forward(ForwardRequest) returns (ForwardResponse);
    rpc Health(Empty) returns (Empty);
}


